--- a/index.html
+++ b/index.html
@@ -1,22 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="img/Logo.ico" type="image/x-icon">
 </head>
+
 <body>
     <header>
-        <h1 id="titulo">Turismo</h1>
+        <nav id="nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="javascript:void(0)"><img src="img/Logo.png" alt="Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mynavbar">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)">
+                                <h4 id="text">Home</h4>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)">
+                                <h4 id="text">Pacotes</h4>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)">
+                                <h4 id="text">Contatos</h4>
+                            </a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="text" placeholder="Pesquisar">
+                        <button class="btn btn-primary" type="button">Buscar</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
-
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div id="video" class="carousel-item active">
+                    <video id="video" class="img-fluid" autoplay loop muted>
+                        <source src="img/video(1).mp4" type="video/mp4">
+                    </video>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Primeiro Vídeo</h5>
+                        <p>Descrição do primeiro vídeo.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img id="img" src="img/foto1.png" alt="Dunas" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h4>Dunas</h4>
+                        <p>Um ótimo local para relaxar e se encantar com essa incrível paisagem.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img id="img" src="img/foto2.png" alt="Fervedouro" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h4>Fervedouro</h4>
+                        <p>Um bom local para gosta de se divertir em um lugar mais calmo e familiar.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img id="img" src="img/foto3.png" alt="Cachoeira" class="d-block w-100">
+                    <div class="carousel-caption">
+                        <h4>Cachoeira</h4>
+                        <p>Para quem gosta de aventuras, esse é o lugar perfeito.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
     </main>
     <footer class="fixed-bottom">
-        <h3>&copy;Powered by Davi Suassuna</h3>
+        <h3>&copy; 2025 Tocantins. Todos os direitos reservados</h3>
     </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
