--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
     <main>
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <div id="demo" class="carousel slide col-sm-12" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
@@ -53,33 +53,31 @@
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
             </div>
             <div class="carousel-inner">
-                <div id="video" class="carousel-item active">
-                    <video id="video" class="img-fluid" autoplay loop muted>
-                        <source src="img/video(1).mp4" type="video/mp4">
-                    </video>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Primeiro Vídeo</h5>
-                        <p>Descrição do primeiro vídeo.</p>
+                <div id="video" id="Jalapao" class="carousel-item active">
+                    <video id="video" class="img-fluid" src="img/video(1).mp4" autoplay loop muted></video>
+                    <div class="carousel-caption">
+                        <h5>Jalapão</h5>
+                        <p>Um bom lugar se sentir parte da natureza.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img id="img" src="img/foto1.png" alt="Dunas" class="d-block w-100">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h4>Dunas</h4>
+                    <img id="img" src="img/palmas1.png" alt="Dunas" class="d-block w-100">
+                    <div class="carousel-caption">
+                        <h4>Palmas</h4>
                         <p>Um ótimo local para relaxar e se encantar com essa incrível paisagem.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img id="img" src="img/foto2.png" alt="Fervedouro" class="d-block w-100">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h4>Fervedouro</h4>
+                    <img id="img" src="img/araguaia.png" alt="Fervedouro" class="d-block w-100">
+                    <div class="carousel-caption">
+                        <h4>Rio Araguaia</h4>
                         <p>Um bom local para gosta de se divertir em um lugar mais calmo e familiar.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img id="img" src="img/foto3.png" alt="Cachoeira" class="d-block w-100">
+                    <img id="img" src="img/portonacional1.png" alt="Cachoeira" class="d-block w-100">
                     <div class="carousel-caption">
-                        <h4>Cachoeira</h4>
+                        <h4>Porto Nacional</h4>
                         <p>Para quem gosta de aventuras, esse é o lugar perfeito.</p>
                     </div>
                 </div>
@@ -90,6 +88,61 @@
             <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </button>
+        </div>
+        <div id="conheToca" class="container-fluid col-sm-12">
+            <h2>Conheça o Tocantins</h2>
+        </div>
+        <section id="navToca" class="row mb-5">
+            <div id="section-turismo" class="card col-3">
+                <img id="imgTurismo" class="card-img-top" src="img/jalapa.png" alt="Jalapão">
+                <div id="card-body" class="card-body">
+                    <h3 class="card-title">Jalapão</h3>
+                    <p class="card-text">O Jalapão é uma região do estado do Tocantins, no Brasil, conhecida pela
+                        sua natureza intocada e por
+                        ser um destino de ecoturismo. É uma região árida, com oásis, rios, riachos e ribeirões.</p>
+                    <br>
+                    <br>
+                    <a href="#" id="bottom" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+            <div id="section-turismo" class="card col-3">
+                <img id="imgTurismo" class="card-img-top" src="img/palmas.png" alt="Palmas">
+                <div id="card-body" class="card-body">
+                    <h3 class="card-title">Palmas</h3>
+                    <p class="card-text">Palmas é um município brasileiro, capital e também a maior cidade do estado
+                        do Tocantins. A cidade
+                        foi fundada em 20 de maio de 1989, sete meses e meio após a criação do Tocantins pela
+                        Constituição
+                        de 1988.</p>
+                    <br>
+                    <a href="#" id="bottom" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+            <div id="section-turismo" class="card col-3">
+                <img id="imgTurismo" class="card-img-top" src="img/araguanã.png" alt="Araguanã">
+                <div id="card-body" class="card-body">
+                    <h3 class="card-title">Araguanã</h3>
+                    <p class="card-text">A Praia de Araguanã é localizada no Rio Araguaia e a praia é formada pela
+                        areia branca devido a baixa
+                        do rio que ocorre nos meses de junho a setembro. A prefeitura durante a temporada monta uma
+                        estrutura provisória para atender os turistas.</p>
+                    <a href="#" id="bottom" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+            <div id="section-turismo" class="card col-3">
+                <img id="imgTurismo" class="card-img-top" src="img/portonacional.png" alt="Porto Nacional">
+                <div id="card-body" class="card-body">
+                    <h3 class="card-title">Porto Nacional</h3>
+                    <p class="card-text">Porto Nacional é um município brasileiro do estado do Tocantins. O
+                        município é considerado um polo regional próximo a capital Palmas, sendo importante acesso a
+                        algumas regiões do estado e do país.</p>
+                    <br>
+                    <a href="#" id="bottom" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </section>
+        <div id="conheToca" class="container-fluid col-sm-12">
+            <h2>Fale conosco</h2>
         </div>
     </main>
     <footer class="fixed-bottom">
