--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </div>
             <div class="carousel-inner">
                 <div id="video" id="Jalapao" class="carousel-item active">
-                    <video id="video" class="img-fluid" src="img/video(1).mp4" autoplay loop muted></video>
+                    <video id="video" class="img-fluid" src="img/Jalapa.mp4" autoplay loop muted></video>
                     <div class="carousel-caption">
-                        <h5>Jalapão</h5>
+                        <h4>Jalapão</h4>
                         <p>Um bom lugar se sentir parte da natureza.</p>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                 <span class="carousel-control-next-icon"></span>
             </button>
         </div>
-        <div id="conheToca" class="container-fluid col-sm-12">
+        <div id="conheToca1" class="container-fluid col-sm-12">
             <h2>Conheça o Tocantins</h2>
         </div>
         <section id="navToca" class="row mb-5">
@@ -141,8 +141,44 @@
                 </div>
             </div>
         </section>
-        <div id="conheToca" class="container-fluid col-sm-12">
+        <div id="conheToca2" class="container-fluid">
             <h2>Fale conosco</h2>
+            <section id="contatos" class="row mb-12">
+                <div id="contatosForm" class=" col-sm-6">
+                    <h3>Formulário de contato</h3>
+                    <form action="">
+                        <div class="mb-3 mt-3">
+                            <label for="Nome" class="form-label"><h5>Nome:</h5></label>
+                            <input type="name" class="form-control" id="name" placeholder="Informe seu nome"
+                                name="name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label"><h5>Email:</h5></label>
+                            <input type="email" class="form-control" id="email" placeholder="Informe seu email"
+                                name="email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="comment"><h5>Mensagens:</h5></label>
+                            <textarea class="form-control" rows="5" name="text" id="comment"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </form>
+                    <br>
+                    <h3>Redes sociais</h3>
+                    <a href="#"><img id="whatsapp" src="img/whatsapp.png" alt="whatsapp"></a>
+                    <a href="#"><img id="instagram" src="img/instagram.png" alt="whatsapp"></a>
+                    <br>
+                    <br>
+                </div>
+                <div id="contatosForm" class="col-sm-6">
+                    <h3>Localização</h3>
+                    <br>
+                    <iframe id="maps"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424.8740388805262!2d-48.33443007198865!3d-10.177840110172733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9324cb714b8f8f1f%3A0xb051fee550c22336!2sFedera%C3%A7%C3%A3o%20do%20Com%C3%A9rcio%20de%20Bens%2C%20Servi%C3%A7os%20e%20Turismo%20do%20Estado%20do%20Tocantins%20-%20Fecom%C3%A9rcio!5e0!3m2!1spt-BR!2sbr!4v1743529442247!5m2!1spt-BR!2sbr"
+                        width="900" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </section>
         </div>
     </main>
     <footer class="fixed-bottom">
